src/main/java/lexical/test/passing/underscoreIdentifier.ru
/? CORRECTO: ANALISIS LEXICO
/? | TOKEN | LEXEMA | NUMERO DE LINEA (NUMERO DE COLUMNA) |
/? | ID | hola_aa_ | 1 (1) |
hola_aa_