src/main/java/lexical/test/failing/07.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 2 | Caracter vacio |
''

